# NatType-Detect

./: .gitignore  CMakeLists.txt  README.md  cmake.bat  cmake.sh
client/: CMakeLists.txt  client.cpp
common/: common.h
server/: CMakeLists.txt  server.cpp
